updates to several scripts and csv files

--- a/figures/parameters/bombus_li_table.html
+++ b/figures/parameters/bombus_li_table.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="wmjbhxhnaq" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#wmjbhxhnaq table {
+<div id="daxuwqavrw" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#daxuwqavrw table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#wmjbhxhnaq thead, #wmjbhxhnaq tbody, #wmjbhxhnaq tfoot, #wmjbhxhnaq tr, #wmjbhxhnaq td, #wmjbhxhnaq th {
+#daxuwqavrw thead, #daxuwqavrw tbody, #daxuwqavrw tfoot, #daxuwqavrw tr, #daxuwqavrw td, #daxuwqavrw th {
   border-style: none;
 }
 
-#wmjbhxhnaq p {
+#daxuwqavrw p {
   margin: 0;
   padding: 0;
 }
 
-#wmjbhxhnaq .gt_table {
+#daxuwqavrw .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_caption {
+#daxuwqavrw .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#wmjbhxhnaq .gt_title {
+#daxuwqavrw .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#wmjbhxhnaq .gt_subtitle {
+#daxuwqavrw .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#wmjbhxhnaq .gt_heading {
+#daxuwqavrw .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_bottom_border {
+#daxuwqavrw .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_col_headings {
+#daxuwqavrw .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_col_heading {
+#daxuwqavrw .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#wmjbhxhnaq .gt_column_spanner_outer {
+#daxuwqavrw .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#wmjbhxhnaq .gt_column_spanner_outer:first-child {
+#daxuwqavrw .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#wmjbhxhnaq .gt_column_spanner_outer:last-child {
+#daxuwqavrw .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#wmjbhxhnaq .gt_column_spanner {
+#daxuwqavrw .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#wmjbhxhnaq .gt_spanner_row {
+#daxuwqavrw .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#wmjbhxhnaq .gt_group_heading {
+#daxuwqavrw .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#wmjbhxhnaq .gt_empty_group_heading {
+#daxuwqavrw .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#wmjbhxhnaq .gt_from_md > :first-child {
+#daxuwqavrw .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#wmjbhxhnaq .gt_from_md > :last-child {
+#daxuwqavrw .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#wmjbhxhnaq .gt_row {
+#daxuwqavrw .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#wmjbhxhnaq .gt_stub {
+#daxuwqavrw .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#wmjbhxhnaq .gt_stub_row_group {
+#daxuwqavrw .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#wmjbhxhnaq .gt_row_group_first td {
+#daxuwqavrw .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#wmjbhxhnaq .gt_row_group_first th {
+#daxuwqavrw .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#wmjbhxhnaq .gt_summary_row {
+#daxuwqavrw .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#wmjbhxhnaq .gt_first_summary_row {
+#daxuwqavrw .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_first_summary_row.thick {
+#daxuwqavrw .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#wmjbhxhnaq .gt_last_summary_row {
+#daxuwqavrw .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_grand_summary_row {
+#daxuwqavrw .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#wmjbhxhnaq .gt_first_grand_summary_row {
+#daxuwqavrw .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_last_grand_summary_row_top {
+#daxuwqavrw .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_striped {
+#daxuwqavrw .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#wmjbhxhnaq .gt_table_body {
+#daxuwqavrw .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_footnotes {
+#daxuwqavrw .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_footnote {
+#daxuwqavrw .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#wmjbhxhnaq .gt_sourcenotes {
+#daxuwqavrw .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#wmjbhxhnaq .gt_sourcenote {
+#daxuwqavrw .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,63 +387,63 @@
   padding-right: 5px;
 }
 
-#wmjbhxhnaq .gt_left {
+#daxuwqavrw .gt_left {
   text-align: left;
 }
 
-#wmjbhxhnaq .gt_center {
+#daxuwqavrw .gt_center {
   text-align: center;
 }
 
-#wmjbhxhnaq .gt_right {
+#daxuwqavrw .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#wmjbhxhnaq .gt_font_normal {
+#daxuwqavrw .gt_font_normal {
   font-weight: normal;
 }
 
-#wmjbhxhnaq .gt_font_bold {
+#daxuwqavrw .gt_font_bold {
   font-weight: bold;
 }
 
-#wmjbhxhnaq .gt_font_italic {
+#daxuwqavrw .gt_font_italic {
   font-style: italic;
 }
 
-#wmjbhxhnaq .gt_super {
+#daxuwqavrw .gt_super {
   font-size: 65%;
 }
 
-#wmjbhxhnaq .gt_footnote_marks {
+#daxuwqavrw .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#wmjbhxhnaq .gt_asterisk {
+#daxuwqavrw .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#wmjbhxhnaq .gt_indent_1 {
+#daxuwqavrw .gt_indent_1 {
   text-indent: 5px;
 }
 
-#wmjbhxhnaq .gt_indent_2 {
+#daxuwqavrw .gt_indent_2 {
   text-indent: 10px;
 }
 
-#wmjbhxhnaq .gt_indent_3 {
+#daxuwqavrw .gt_indent_3 {
   text-indent: 15px;
 }
 
-#wmjbhxhnaq .gt_indent_4 {
+#daxuwqavrw .gt_indent_4 {
   text-indent: 20px;
 }
 
-#wmjbhxhnaq .gt_indent_5 {
+#daxuwqavrw .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -468,6 +468,7 @@
       <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="KupSurface">KupSurface</th>
       <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="LAI">LAI</th>
       <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="LMA">LMA</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="logKow">logKow</th>
       <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Psoil">Psoil</th>
       <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Wleaf">Wleaf</th>
     </tr>
@@ -486,10 +487,11 @@
 <td headers="KelGrow" class="gt_row gt_right">0.035</td>
 <td headers="Kn-L" class="gt_row gt_right">0.00003480</td>
 <td headers="Kp-L" class="gt_row gt_right">4.3499477</td>
-<td headers="KupSoil" class="gt_row gt_right">0.0000000156</td>
+<td headers="KupSoil" class="gt_row gt_right">0.000000117</td>
 <td headers="KupSurface" class="gt_row gt_right">8.40e+00</td>
 <td headers="LAI" class="gt_row gt_right">2</td>
 <td headers="LMA" class="gt_row gt_right">0.08</td>
+<td headers="logKow" class="gt_row gt_right">8.15</td>
 <td headers="Psoil" class="gt_row gt_right">1.95</td>
 <td headers="Wleaf" class="gt_row gt_right">0.8</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">CARBARYL</td>
@@ -505,10 +507,11 @@
 <td headers="KelGrow" class="gt_row gt_right">0.035</td>
 <td headers="Kn-L" class="gt_row gt_right">0.39972309</td>
 <td headers="Kp-L" class="gt_row gt_right">3.1368404</td>
-<td headers="KupSoil" class="gt_row gt_right">6.2675976790</td>
+<td headers="KupSoil" class="gt_row gt_right">47.032052980</td>
 <td headers="KupSurface" class="gt_row gt_right">4.94e-03</td>
 <td headers="LAI" class="gt_row gt_right">2</td>
 <td headers="LMA" class="gt_row gt_right">0.08</td>
+<td headers="logKow" class="gt_row gt_right">2.36</td>
 <td headers="Psoil" class="gt_row gt_right">1.95</td>
 <td headers="Wleaf" class="gt_row gt_right">0.8</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">CARBOFURAN</td>
@@ -524,10 +527,11 @@
 <td headers="KelGrow" class="gt_row gt_right">0.035</td>
 <td headers="Kn-L" class="gt_row gt_right">0.41804759</td>
 <td headers="Kp-L" class="gt_row gt_right">3.0812256</td>
-<td headers="KupSoil" class="gt_row gt_right">6.5695568570</td>
+<td headers="KupSoil" class="gt_row gt_right">49.297954660</td>
 <td headers="KupSurface" class="gt_row gt_right">2.72e-03</td>
 <td headers="LAI" class="gt_row gt_right">2</td>
 <td headers="LMA" class="gt_row gt_right">0.08</td>
+<td headers="logKow" class="gt_row gt_right">2.32</td>
 <td headers="Psoil" class="gt_row gt_right">1.95</td>
 <td headers="Wleaf" class="gt_row gt_right">0.8</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">CHLORPYRIFOS</td>
@@ -543,10 +547,11 @@
 <td headers="KelGrow" class="gt_row gt_right">0.035</td>
 <td headers="Kn-L" class="gt_row gt_right">0.00987578</td>
 <td headers="Kp-L" class="gt_row gt_right">4.3351555</td>
-<td headers="KupSoil" class="gt_row gt_right">0.0177812380</td>
+<td headers="KupSoil" class="gt_row gt_right">0.133430407</td>
 <td headers="KupSurface" class="gt_row gt_right">3.95e-02</td>
 <td headers="LAI" class="gt_row gt_right">2</td>
 <td headers="LMA" class="gt_row gt_right">0.08</td>
+<td headers="logKow" class="gt_row gt_right">4.96</td>
 <td headers="Psoil" class="gt_row gt_right">1.95</td>
 <td headers="Wleaf" class="gt_row gt_right">0.8</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">CLOTHIANIDIN</td>
@@ -562,10 +567,11 @@
 <td headers="KelGrow" class="gt_row gt_right">0.035</td>
 <td headers="Kn-L" class="gt_row gt_right">0.80725592</td>
 <td headers="Kp-L" class="gt_row gt_right">0.8586181</td>
-<td headers="KupSoil" class="gt_row gt_right">9.5700000000</td>
+<td headers="KupSoil" class="gt_row gt_right">71.800000000</td>
 <td headers="KupSurface" class="gt_row gt_right">5.45e-05</td>
 <td headers="LAI" class="gt_row gt_right">2</td>
 <td headers="LMA" class="gt_row gt_right">0.08</td>
+<td headers="logKow" class="gt_row gt_right">0.91</td>
 <td headers="Psoil" class="gt_row gt_right">1.95</td>
 <td headers="Wleaf" class="gt_row gt_right">0.8</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">GLYPHOSATE</td>
@@ -581,10 +587,11 @@
 <td headers="KelGrow" class="gt_row gt_right">0.035</td>
 <td headers="Kn-L" class="gt_row gt_right">0.90116915</td>
 <td headers="Kp-L" class="gt_row gt_right">0.2533838</td>
-<td headers="KupSoil" class="gt_row gt_right">0.0000256000</td>
+<td headers="KupSoil" class="gt_row gt_right">0.000192000</td>
 <td headers="KupSurface" class="gt_row gt_right">2.56e-08</td>
 <td headers="LAI" class="gt_row gt_right">2</td>
 <td headers="LMA" class="gt_row gt_right">0.08</td>
+<td headers="logKow" class="gt_row gt_right">-3.40</td>
 <td headers="Psoil" class="gt_row gt_right">1.95</td>
 <td headers="Wleaf" class="gt_row gt_right">0.8</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">IMIDACLOPRID</td>
@@ -600,10 +607,11 @@
 <td headers="KelGrow" class="gt_row gt_right">0.035</td>
 <td headers="Kn-L" class="gt_row gt_right">0.85672634</td>
 <td headers="Kp-L" class="gt_row gt_right">0.6446586</td>
-<td headers="KupSoil" class="gt_row gt_right">6.7719625830</td>
+<td headers="KupSoil" class="gt_row gt_right">50.816807220</td>
 <td headers="KupSurface" class="gt_row gt_right">2.20e-05</td>
 <td headers="LAI" class="gt_row gt_right">2</td>
 <td headers="LMA" class="gt_row gt_right">0.08</td>
+<td headers="logKow" class="gt_row gt_right">0.57</td>
 <td headers="Psoil" class="gt_row gt_right">1.95</td>
 <td headers="Wleaf" class="gt_row gt_right">0.8</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">THIAMETHOXAM</td>
@@ -619,10 +627,11 @@
 <td headers="KelGrow" class="gt_row gt_right">0.035</td>
 <td headers="Kn-L" class="gt_row gt_right">0.88018521</td>
 <td headers="Kp-L" class="gt_row gt_right">0.3487745</td>
-<td headers="KupSoil" class="gt_row gt_right">2.0200000000</td>
+<td headers="KupSoil" class="gt_row gt_right">15.100000000</td>
 <td headers="KupSurface" class="gt_row gt_right">1.82e-06</td>
 <td headers="LAI" class="gt_row gt_right">2</td>
 <td headers="LMA" class="gt_row gt_right">0.08</td>
+<td headers="logKow" class="gt_row gt_right">-0.13</td>
 <td headers="Psoil" class="gt_row gt_right">1.95</td>
 <td headers="Wleaf" class="gt_row gt_right">0.8</td></tr>
   </tbody>
