--- a/figures/parameters/bombus_apprate_table.html
+++ b/figures/parameters/bombus_apprate_table.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="hypsbqiufs" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#hypsbqiufs table {
+<div id="wfodcynklb" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#wfodcynklb table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#hypsbqiufs thead, #hypsbqiufs tbody, #hypsbqiufs tfoot, #hypsbqiufs tr, #hypsbqiufs td, #hypsbqiufs th {
+#wfodcynklb thead, #wfodcynklb tbody, #wfodcynklb tfoot, #wfodcynklb tr, #wfodcynklb td, #wfodcynklb th {
   border-style: none;
 }
 
-#hypsbqiufs p {
+#wfodcynklb p {
   margin: 0;
   padding: 0;
 }
 
-#hypsbqiufs .gt_table {
+#wfodcynklb .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_caption {
+#wfodcynklb .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#hypsbqiufs .gt_title {
+#wfodcynklb .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#hypsbqiufs .gt_subtitle {
+#wfodcynklb .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#hypsbqiufs .gt_heading {
+#wfodcynklb .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_bottom_border {
+#wfodcynklb .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_col_headings {
+#wfodcynklb .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_col_heading {
+#wfodcynklb .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#hypsbqiufs .gt_column_spanner_outer {
+#wfodcynklb .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#hypsbqiufs .gt_column_spanner_outer:first-child {
+#wfodcynklb .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#hypsbqiufs .gt_column_spanner_outer:last-child {
+#wfodcynklb .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#hypsbqiufs .gt_column_spanner {
+#wfodcynklb .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#hypsbqiufs .gt_spanner_row {
+#wfodcynklb .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#hypsbqiufs .gt_group_heading {
+#wfodcynklb .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#hypsbqiufs .gt_empty_group_heading {
+#wfodcynklb .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#hypsbqiufs .gt_from_md > :first-child {
+#wfodcynklb .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#hypsbqiufs .gt_from_md > :last-child {
+#wfodcynklb .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#hypsbqiufs .gt_row {
+#wfodcynklb .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#hypsbqiufs .gt_stub {
+#wfodcynklb .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#hypsbqiufs .gt_stub_row_group {
+#wfodcynklb .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#hypsbqiufs .gt_row_group_first td {
+#wfodcynklb .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#hypsbqiufs .gt_row_group_first th {
+#wfodcynklb .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#hypsbqiufs .gt_summary_row {
+#wfodcynklb .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#hypsbqiufs .gt_first_summary_row {
+#wfodcynklb .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_first_summary_row.thick {
+#wfodcynklb .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#hypsbqiufs .gt_last_summary_row {
+#wfodcynklb .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_grand_summary_row {
+#wfodcynklb .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#hypsbqiufs .gt_first_grand_summary_row {
+#wfodcynklb .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_last_grand_summary_row_top {
+#wfodcynklb .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_striped {
+#wfodcynklb .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#hypsbqiufs .gt_table_body {
+#wfodcynklb .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_footnotes {
+#wfodcynklb .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_footnote {
+#wfodcynklb .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#hypsbqiufs .gt_sourcenotes {
+#wfodcynklb .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#hypsbqiufs .gt_sourcenote {
+#wfodcynklb .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,63 +387,63 @@
   padding-right: 5px;
 }
 
-#hypsbqiufs .gt_left {
+#wfodcynklb .gt_left {
   text-align: left;
 }
 
-#hypsbqiufs .gt_center {
+#wfodcynklb .gt_center {
   text-align: center;
 }
 
-#hypsbqiufs .gt_right {
+#wfodcynklb .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#hypsbqiufs .gt_font_normal {
+#wfodcynklb .gt_font_normal {
   font-weight: normal;
 }
 
-#hypsbqiufs .gt_font_bold {
+#wfodcynklb .gt_font_bold {
   font-weight: bold;
 }
 
-#hypsbqiufs .gt_font_italic {
+#wfodcynklb .gt_font_italic {
   font-style: italic;
 }
 
-#hypsbqiufs .gt_super {
+#wfodcynklb .gt_super {
   font-size: 65%;
 }
 
-#hypsbqiufs .gt_footnote_marks {
+#wfodcynklb .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#hypsbqiufs .gt_asterisk {
+#wfodcynklb .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#hypsbqiufs .gt_indent_1 {
+#wfodcynklb .gt_indent_1 {
   text-indent: 5px;
 }
 
-#hypsbqiufs .gt_indent_2 {
+#wfodcynklb .gt_indent_2 {
   text-indent: 10px;
 }
 
-#hypsbqiufs .gt_indent_3 {
+#wfodcynklb .gt_indent_3 {
   text-indent: 15px;
 }
 
-#hypsbqiufs .gt_indent_4 {
+#wfodcynklb .gt_indent_4 {
   text-indent: 20px;
 }
 
-#hypsbqiufs .gt_indent_5 {
+#wfodcynklb .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -521,54 +521,54 @@
 <td headers="type" class="gt_row gt_left">Pollen</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">BIFENTHRIN</td>
 <td headers="Type" class="gt_row gt_left">Pyrethroid</td>
-<td headers="AvgRate" class="gt_row gt_right">0.1000</td>
+<td headers="AvgRate" class="gt_row gt_right">0.0900</td>
 <td headers="Units" class="gt_row gt_left">lb a.i./acre</td>
-<td headers="ApplicationType" class="gt_row gt_left">Soil</td>
-<td headers="Commodity" class="gt_row gt_left">CORN</td>
+<td headers="ApplicationType" class="gt_row gt_left">Seed</td>
+<td headers="Commodity" class="gt_row gt_left">SOYBEANS</td>
 <td headers="ApplicationTiming..d." class="gt_row gt_right">0</td>
-<td headers="Notes" class="gt_row gt_left">At-plant/Pre-Plant</td>
-<td headers="Source" class="gt_row gt_left">Label, Bifenthrin 17.15%</td>
-<td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
-<td headers="Note" class="gt_row gt_left"></td>
+<td headers="Notes" class="gt_row gt_left">At-Plant</td>
+<td headers="Source" class="gt_row gt_left">Label, 180 FS</td>
+<td headers="Fnote" class="gt_row gt_left">Maximum </td>
+<td headers="Note" class="gt_row gt_left">Seed treatment</td>
 <td headers="k_values" class="gt_row gt_right">0.006931472</td>
 <td headers="type" class="gt_row gt_left">Nectar</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">BIFENTHRIN</td>
 <td headers="Type" class="gt_row gt_left">Pyrethroid</td>
-<td headers="AvgRate" class="gt_row gt_right">0.1000</td>
+<td headers="AvgRate" class="gt_row gt_right">0.0900</td>
 <td headers="Units" class="gt_row gt_left">lb a.i./acre</td>
-<td headers="ApplicationType" class="gt_row gt_left">Soil</td>
-<td headers="Commodity" class="gt_row gt_left">CORN</td>
+<td headers="ApplicationType" class="gt_row gt_left">Seed</td>
+<td headers="Commodity" class="gt_row gt_left">SOYBEANS</td>
 <td headers="ApplicationTiming..d." class="gt_row gt_right">0</td>
-<td headers="Notes" class="gt_row gt_left">At-plant/Pre-Plant</td>
-<td headers="Source" class="gt_row gt_left">Label, Bifenthrin 17.15%</td>
-<td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
-<td headers="Note" class="gt_row gt_left"></td>
+<td headers="Notes" class="gt_row gt_left">At-Plant</td>
+<td headers="Source" class="gt_row gt_left">Label, 180 FS</td>
+<td headers="Fnote" class="gt_row gt_left">Maximum </td>
+<td headers="Note" class="gt_row gt_left">Seed treatment</td>
 <td headers="k_values" class="gt_row gt_right">0.006931472</td>
 <td headers="type" class="gt_row gt_left">Pollen</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">BIFENTHRIN</td>
 <td headers="Type" class="gt_row gt_left">Pyrethroid</td>
-<td headers="AvgRate" class="gt_row gt_right">0.2000</td>
+<td headers="AvgRate" class="gt_row gt_right">0.1000</td>
 <td headers="Units" class="gt_row gt_left">lb a.i./acre</td>
-<td headers="ApplicationType" class="gt_row gt_left">Seed</td>
-<td headers="Commodity" class="gt_row gt_left">SOYBEANS</td>
+<td headers="ApplicationType" class="gt_row gt_left">Soil</td>
+<td headers="Commodity" class="gt_row gt_left">CORN</td>
 <td headers="ApplicationTiming..d." class="gt_row gt_right">0</td>
-<td headers="Notes" class="gt_row gt_left">At-Plant</td>
-<td headers="Source" class="gt_row gt_left">Label, 180 FS</td>
-<td headers="Fnote" class="gt_row gt_left">Maximum </td>
-<td headers="Note" class="gt_row gt_left">Seed treatment</td>
+<td headers="Notes" class="gt_row gt_left">At-plant/Pre-Plant</td>
+<td headers="Source" class="gt_row gt_left">Label, Bifenthrin 17.15%</td>
+<td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
+<td headers="Note" class="gt_row gt_left"></td>
 <td headers="k_values" class="gt_row gt_right">0.006931472</td>
 <td headers="type" class="gt_row gt_left">Nectar</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">BIFENTHRIN</td>
 <td headers="Type" class="gt_row gt_left">Pyrethroid</td>
-<td headers="AvgRate" class="gt_row gt_right">0.2000</td>
+<td headers="AvgRate" class="gt_row gt_right">0.1000</td>
 <td headers="Units" class="gt_row gt_left">lb a.i./acre</td>
-<td headers="ApplicationType" class="gt_row gt_left">Seed</td>
-<td headers="Commodity" class="gt_row gt_left">SOYBEANS</td>
+<td headers="ApplicationType" class="gt_row gt_left">Soil</td>
+<td headers="Commodity" class="gt_row gt_left">CORN</td>
 <td headers="ApplicationTiming..d." class="gt_row gt_right">0</td>
-<td headers="Notes" class="gt_row gt_left">At-Plant</td>
-<td headers="Source" class="gt_row gt_left">Label, 180 FS</td>
-<td headers="Fnote" class="gt_row gt_left">Maximum </td>
-<td headers="Note" class="gt_row gt_left">Seed treatment</td>
+<td headers="Notes" class="gt_row gt_left">At-plant/Pre-Plant</td>
+<td headers="Source" class="gt_row gt_left">Label, Bifenthrin 17.15%</td>
+<td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
+<td headers="Note" class="gt_row gt_left"></td>
 <td headers="k_values" class="gt_row gt_right">0.006931472</td>
 <td headers="type" class="gt_row gt_left">Pollen</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">CARBARYL</td>
@@ -712,7 +712,7 @@
 <td headers="Source" class="gt_row gt_left">Douglas and Tooker</td>
 <td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
 <td headers="Note" class="gt_row gt_left"></td>
-<td headers="k_values" class="gt_row gt_right">0.001271830</td>
+<td headers="k_values" class="gt_row gt_right">0.004620981</td>
 <td headers="type" class="gt_row gt_left">Nectar</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">CLOTHIANIDIN</td>
 <td headers="Type" class="gt_row gt_left">Neonicotinoid</td>
@@ -725,7 +725,7 @@
 <td headers="Source" class="gt_row gt_left">Douglas and Tooker</td>
 <td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
 <td headers="Note" class="gt_row gt_left"></td>
-<td headers="k_values" class="gt_row gt_right">0.001271830</td>
+<td headers="k_values" class="gt_row gt_right">0.004620981</td>
 <td headers="type" class="gt_row gt_left">Pollen</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">GLYPHOSATE</td>
 <td headers="Type" class="gt_row gt_left">Herbicide</td>
@@ -790,7 +790,7 @@
 <td headers="Source" class="gt_row gt_left">Douglas and Tooker</td>
 <td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
 <td headers="Note" class="gt_row gt_left"></td>
-<td headers="k_values" class="gt_row gt_right">0.003629043</td>
+<td headers="k_values" class="gt_row gt_right">0.017328680</td>
 <td headers="type" class="gt_row gt_left">Nectar</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">IMIDACLOPRID</td>
 <td headers="Type" class="gt_row gt_left">Neonicotinoid</td>
@@ -803,7 +803,7 @@
 <td headers="Source" class="gt_row gt_left">Douglas and Tooker</td>
 <td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
 <td headers="Note" class="gt_row gt_left"></td>
-<td headers="k_values" class="gt_row gt_right">0.003629043</td>
+<td headers="k_values" class="gt_row gt_right">0.017328680</td>
 <td headers="type" class="gt_row gt_left">Pollen</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">IMIDACLOPRID</td>
 <td headers="Type" class="gt_row gt_left">Neonicotinoid</td>
@@ -816,7 +816,7 @@
 <td headers="Source" class="gt_row gt_left">Douglas and Tooker</td>
 <td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
 <td headers="Note" class="gt_row gt_left"></td>
-<td headers="k_values" class="gt_row gt_right">0.003629043</td>
+<td headers="k_values" class="gt_row gt_right">0.017328680</td>
 <td headers="type" class="gt_row gt_left">Nectar</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">IMIDACLOPRID</td>
 <td headers="Type" class="gt_row gt_left">Neonicotinoid</td>
@@ -829,7 +829,7 @@
 <td headers="Source" class="gt_row gt_left">Douglas and Tooker</td>
 <td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
 <td headers="Note" class="gt_row gt_left"></td>
-<td headers="k_values" class="gt_row gt_right">0.003629043</td>
+<td headers="k_values" class="gt_row gt_right">0.017328680</td>
 <td headers="type" class="gt_row gt_left">Pollen</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">IMIDACLOPRID</td>
 <td headers="Type" class="gt_row gt_left">Neonicotinoid</td>
@@ -842,7 +842,7 @@
 <td headers="Source" class="gt_row gt_left">Label, 4F</td>
 <td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
 <td headers="Note" class="gt_row gt_left"></td>
-<td headers="k_values" class="gt_row gt_right">0.003629043</td>
+<td headers="k_values" class="gt_row gt_right">0.017328680</td>
 <td headers="type" class="gt_row gt_left">Nectar</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">IMIDACLOPRID</td>
 <td headers="Type" class="gt_row gt_left">Neonicotinoid</td>
@@ -855,7 +855,7 @@
 <td headers="Source" class="gt_row gt_left">Label, 4F</td>
 <td headers="Fnote" class="gt_row gt_left">Average or standard reported rate for pest</td>
 <td headers="Note" class="gt_row gt_left"></td>
-<td headers="k_values" class="gt_row gt_right">0.003629043</td>
+<td headers="k_values" class="gt_row gt_right">0.017328680</td>
 <td headers="type" class="gt_row gt_left">Pollen</td></tr>
     <tr><td headers="Compound" class="gt_row gt_left">IMIDACLOPRID</td>
 <td headers="Type" class="gt_row gt_left">Neonicotinoid</td>
