--- a/figures/parameters/bombus_apprate_table.html
+++ b/figures/parameters/bombus_apprate_table.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="uvdflhexnm" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#uvdflhexnm table {
+<div id="ffdhxqepyg" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#ffdhxqepyg table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#uvdflhexnm thead, #uvdflhexnm tbody, #uvdflhexnm tfoot, #uvdflhexnm tr, #uvdflhexnm td, #uvdflhexnm th {
+#ffdhxqepyg thead, #ffdhxqepyg tbody, #ffdhxqepyg tfoot, #ffdhxqepyg tr, #ffdhxqepyg td, #ffdhxqepyg th {
   border-style: none;
 }
 
-#uvdflhexnm p {
+#ffdhxqepyg p {
   margin: 0;
   padding: 0;
 }
 
-#uvdflhexnm .gt_table {
+#ffdhxqepyg .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_caption {
+#ffdhxqepyg .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#uvdflhexnm .gt_title {
+#ffdhxqepyg .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#uvdflhexnm .gt_subtitle {
+#ffdhxqepyg .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#uvdflhexnm .gt_heading {
+#ffdhxqepyg .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_bottom_border {
+#ffdhxqepyg .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_col_headings {
+#ffdhxqepyg .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_col_heading {
+#ffdhxqepyg .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#uvdflhexnm .gt_column_spanner_outer {
+#ffdhxqepyg .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#uvdflhexnm .gt_column_spanner_outer:first-child {
+#ffdhxqepyg .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#uvdflhexnm .gt_column_spanner_outer:last-child {
+#ffdhxqepyg .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#uvdflhexnm .gt_column_spanner {
+#ffdhxqepyg .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#uvdflhexnm .gt_spanner_row {
+#ffdhxqepyg .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#uvdflhexnm .gt_group_heading {
+#ffdhxqepyg .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#uvdflhexnm .gt_empty_group_heading {
+#ffdhxqepyg .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#uvdflhexnm .gt_from_md > :first-child {
+#ffdhxqepyg .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#uvdflhexnm .gt_from_md > :last-child {
+#ffdhxqepyg .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#uvdflhexnm .gt_row {
+#ffdhxqepyg .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#uvdflhexnm .gt_stub {
+#ffdhxqepyg .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#uvdflhexnm .gt_stub_row_group {
+#ffdhxqepyg .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#uvdflhexnm .gt_row_group_first td {
+#ffdhxqepyg .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#uvdflhexnm .gt_row_group_first th {
+#ffdhxqepyg .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#uvdflhexnm .gt_summary_row {
+#ffdhxqepyg .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#uvdflhexnm .gt_first_summary_row {
+#ffdhxqepyg .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_first_summary_row.thick {
+#ffdhxqepyg .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#uvdflhexnm .gt_last_summary_row {
+#ffdhxqepyg .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_grand_summary_row {
+#ffdhxqepyg .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#uvdflhexnm .gt_first_grand_summary_row {
+#ffdhxqepyg .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_last_grand_summary_row_top {
+#ffdhxqepyg .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_striped {
+#ffdhxqepyg .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#uvdflhexnm .gt_table_body {
+#ffdhxqepyg .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_footnotes {
+#ffdhxqepyg .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_footnote {
+#ffdhxqepyg .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#uvdflhexnm .gt_sourcenotes {
+#ffdhxqepyg .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#uvdflhexnm .gt_sourcenote {
+#ffdhxqepyg .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,63 +387,63 @@
   padding-right: 5px;
 }
 
-#uvdflhexnm .gt_left {
+#ffdhxqepyg .gt_left {
   text-align: left;
 }
 
-#uvdflhexnm .gt_center {
+#ffdhxqepyg .gt_center {
   text-align: center;
 }
 
-#uvdflhexnm .gt_right {
+#ffdhxqepyg .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#uvdflhexnm .gt_font_normal {
+#ffdhxqepyg .gt_font_normal {
   font-weight: normal;
 }
 
-#uvdflhexnm .gt_font_bold {
+#ffdhxqepyg .gt_font_bold {
   font-weight: bold;
 }
 
-#uvdflhexnm .gt_font_italic {
+#ffdhxqepyg .gt_font_italic {
   font-style: italic;
 }
 
-#uvdflhexnm .gt_super {
+#ffdhxqepyg .gt_super {
   font-size: 65%;
 }
 
-#uvdflhexnm .gt_footnote_marks {
+#ffdhxqepyg .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#uvdflhexnm .gt_asterisk {
+#ffdhxqepyg .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#uvdflhexnm .gt_indent_1 {
+#ffdhxqepyg .gt_indent_1 {
   text-indent: 5px;
 }
 
-#uvdflhexnm .gt_indent_2 {
+#ffdhxqepyg .gt_indent_2 {
   text-indent: 10px;
 }
 
-#uvdflhexnm .gt_indent_3 {
+#ffdhxqepyg .gt_indent_3 {
   text-indent: 15px;
 }
 
-#uvdflhexnm .gt_indent_4 {
+#ffdhxqepyg .gt_indent_4 {
   text-indent: 20px;
 }
 
-#uvdflhexnm .gt_indent_5 {
+#ffdhxqepyg .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
