--- a/figures/parameters/bombus_apprate_table.html
+++ b/figures/parameters/bombus_apprate_table.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="xudjnhkspk" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#xudjnhkspk table {
+<div id="ztqfzihuiy" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#ztqfzihuiy table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#xudjnhkspk thead, #xudjnhkspk tbody, #xudjnhkspk tfoot, #xudjnhkspk tr, #xudjnhkspk td, #xudjnhkspk th {
+#ztqfzihuiy thead, #ztqfzihuiy tbody, #ztqfzihuiy tfoot, #ztqfzihuiy tr, #ztqfzihuiy td, #ztqfzihuiy th {
   border-style: none;
 }
 
-#xudjnhkspk p {
+#ztqfzihuiy p {
   margin: 0;
   padding: 0;
 }
 
-#xudjnhkspk .gt_table {
+#ztqfzihuiy .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_caption {
+#ztqfzihuiy .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#xudjnhkspk .gt_title {
+#ztqfzihuiy .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#xudjnhkspk .gt_subtitle {
+#ztqfzihuiy .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#xudjnhkspk .gt_heading {
+#ztqfzihuiy .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_bottom_border {
+#ztqfzihuiy .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_col_headings {
+#ztqfzihuiy .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_col_heading {
+#ztqfzihuiy .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#xudjnhkspk .gt_column_spanner_outer {
+#ztqfzihuiy .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#xudjnhkspk .gt_column_spanner_outer:first-child {
+#ztqfzihuiy .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#xudjnhkspk .gt_column_spanner_outer:last-child {
+#ztqfzihuiy .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#xudjnhkspk .gt_column_spanner {
+#ztqfzihuiy .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#xudjnhkspk .gt_spanner_row {
+#ztqfzihuiy .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#xudjnhkspk .gt_group_heading {
+#ztqfzihuiy .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#xudjnhkspk .gt_empty_group_heading {
+#ztqfzihuiy .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#xudjnhkspk .gt_from_md > :first-child {
+#ztqfzihuiy .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#xudjnhkspk .gt_from_md > :last-child {
+#ztqfzihuiy .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#xudjnhkspk .gt_row {
+#ztqfzihuiy .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#xudjnhkspk .gt_stub {
+#ztqfzihuiy .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#xudjnhkspk .gt_stub_row_group {
+#ztqfzihuiy .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#xudjnhkspk .gt_row_group_first td {
+#ztqfzihuiy .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#xudjnhkspk .gt_row_group_first th {
+#ztqfzihuiy .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#xudjnhkspk .gt_summary_row {
+#ztqfzihuiy .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#xudjnhkspk .gt_first_summary_row {
+#ztqfzihuiy .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_first_summary_row.thick {
+#ztqfzihuiy .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#xudjnhkspk .gt_last_summary_row {
+#ztqfzihuiy .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_grand_summary_row {
+#ztqfzihuiy .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#xudjnhkspk .gt_first_grand_summary_row {
+#ztqfzihuiy .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_last_grand_summary_row_top {
+#ztqfzihuiy .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_striped {
+#ztqfzihuiy .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#xudjnhkspk .gt_table_body {
+#ztqfzihuiy .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_footnotes {
+#ztqfzihuiy .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_footnote {
+#ztqfzihuiy .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#xudjnhkspk .gt_sourcenotes {
+#ztqfzihuiy .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#xudjnhkspk .gt_sourcenote {
+#ztqfzihuiy .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,69 +387,68 @@
   padding-right: 5px;
 }
 
-#xudjnhkspk .gt_left {
+#ztqfzihuiy .gt_left {
   text-align: left;
 }
 
-#xudjnhkspk .gt_center {
+#ztqfzihuiy .gt_center {
   text-align: center;
 }
 
-#xudjnhkspk .gt_right {
+#ztqfzihuiy .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#xudjnhkspk .gt_font_normal {
+#ztqfzihuiy .gt_font_normal {
   font-weight: normal;
 }
 
-#xudjnhkspk .gt_font_bold {
+#ztqfzihuiy .gt_font_bold {
   font-weight: bold;
 }
 
-#xudjnhkspk .gt_font_italic {
+#ztqfzihuiy .gt_font_italic {
   font-style: italic;
 }
 
-#xudjnhkspk .gt_super {
+#ztqfzihuiy .gt_super {
   font-size: 65%;
 }
 
-#xudjnhkspk .gt_footnote_marks {
+#ztqfzihuiy .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#xudjnhkspk .gt_asterisk {
+#ztqfzihuiy .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#xudjnhkspk .gt_indent_1 {
+#ztqfzihuiy .gt_indent_1 {
   text-indent: 5px;
 }
 
-#xudjnhkspk .gt_indent_2 {
+#ztqfzihuiy .gt_indent_2 {
   text-indent: 10px;
 }
 
-#xudjnhkspk .gt_indent_3 {
+#ztqfzihuiy .gt_indent_3 {
   text-indent: 15px;
 }
 
-#xudjnhkspk .gt_indent_4 {
+#ztqfzihuiy .gt_indent_4 {
   text-indent: 20px;
 }
 
-#xudjnhkspk .gt_indent_5 {
+#ztqfzihuiy .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
   <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
   <thead>
-    
     <tr class="gt_col_headings">
       <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id="Compound">Compound</th>
       <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id="Type">Type</th>
